--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -1,10 +1,15 @@
 name: Notify Telegram
 
-on: [issue_comment, issues, push, pull_request_target]
+on:
+  issue_comment:
+      types: [created]
+  issues:
+      types: [opened, closed, reopened]
+  pull_request:
+      types: [opened, closed, reopened]
 
 jobs:
   notify_telegram:
-    if: github.repository == 'AY2425S2-CS2113-W12-1/tp'
     runs-on: ubuntu-latest
     steps:
       - name: Notify the Telegram group chat
